styling and order on previous events:

--- a/css/main.css
+++ b/css/main.css
@@ -299,6 +299,12 @@ h3 {
     font-weight: normal;
 }
 
+h4 {
+    text-align: left;
+    font-size: 1.25em;
+    font-weight: normal;
+    margin:0;
+}
 #evwrapper {
     max-width: 840px;
     min-width: 100px;
